--- a/13-statistical_inference_for_regression/13-statistical_inference_for_regression.Rmd
+++ b/13-statistical_inference_for_regression/13-statistical_inference_for_regression.Rmd
@@ -10,11 +10,96 @@ output:
 ##
 
 Logisitcs:
-
+- next two weeks posted
+- no more assignments before spring break, only work on your project
 
 ##
 
+Plan for this week:
+- statistical inference from regression
+- loops and functions
+- beyond stargazing (many of my collogues might not agree with this class)
+
 ##
+
+<img src="images/Data_Science_VD.png" width="800">
+
+<div class="cite">
+http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram
+</div>
+
+##
+
+After this class you will be able to
+
+- look up in a book the assumptions required for a variety of properties of the least-squares estimator
+- describe the difference between empirical and structural relationships
+- explain the consequences of measurement error on the outcome variable and predictor variables
+
+#
+
+assumptions related to regression
+
+##
+
+Data generating process:
+\begin{equation}
+Y_i = \alpha + \beta X_i + \epsilon_i
+\end{equation}
+
+Given lots of pairs $$(x, y)$$ what we can infer about $$\alpha$$ and $$\beta$$?  This must require assumptions.
+
+##
+
+Variety of assumptions
+- linearity
+- contstant variance
+- normality
+- independence
+- fixed X or X measured wihtout error and indepednent of the error
+
+Lead to variety of properties
+- unbiased estimators
+- specific sampling variance
+- most efficent of all linear estimators
+- maximum liklihood estimators
+- coefficents are normally distributed
+
+##
+
+Consider the case
+$$Y_i = \beta_0 + \beta_1 X_i + \epsilon_i$$
+
+Many of the assumptions are about relationship between $X$ and $\epsilon$.
+
+And, these can be checked, see Fox Chapter 12: Diagnosing non-normality, nonconstant error variance, and nonlinearity.
+
+##
+
+How you might have thought before:
+- your p-values = f(your data)
+
+How I hope you think now:
+- your p-values = f(your data, your assumptions)
+
+# 
+
+What about a census?
+
+##
+
+Think back to your homework that involved the 50 US States.  Do these assumptions make sense in that case?
+
+##
+
+# 
+
+measurement error on outcome and predictors
+
+##
+
+
+
 
 ```{r}
 sessionInfo()
