--- a/13-statistical_inference_for_regression/13-statistical_inference_for_regression.Rmd
+++ b/13-statistical_inference_for_regression/13-statistical_inference_for_regression.Rmd
@@ -13,6 +13,7 @@ Logisitcs:
 
 - next two weeks posted
 - no more assignments before spring break, only work on your project
+- results from feedback
 
 ##
 
