--- a/14-loops_and_functions/14-loops_and_functions.Rmd
+++ b/14-loops_and_functions/14-loops_and_functions.Rmd
@@ -130,13 +130,13 @@ head(cbind(sqr, sqr.squared))
 http://www.ats.ucla.edu/stat/r/library/intro_function.htm  
 ```{r}
 
-# Creating a function, called f1, which adds a pair of numbers.
-f1 <- function(x, y) {
+F1 <- function(x, y) {
+  # Creating a function, called f1, which adds a pair of numbers.
   x + y
 }
 
-f1(3, 4)
-f1(2, 6)
+F1(3, 4)
+F1(2, 6)
 ```
 
 
@@ -149,23 +149,22 @@ f1(2, 6)
 
 ```{r}
 
-my.scatter.plot <- function(color, size = 2, method) { # set default size to 2
+My.scatter.plot <- function(color, size = 2, method) { # set default size to 2
   ggplot(df, aes(x = HDI.2005, y =  TFR.2005)) + 
     geom_point(color = color, size = size) +   # color and size vary based on inputs
     geom_smooth(method = method, color = "red") + # line will always be red
     theme_bw()                                    # theme will always be bw
 }
 
-# my.scatter.plot(color = "green", size = 6,  method = "lm")
-# my.scatter.plot(color = "blue",  method = "lm")
-# my.scatter.plot("red", 5, "loess")
+# My.scatter.plot(color = "green", size = 6,  method = "lm")
+# My.scatter.plot(color = "blue",  method = "lm")
+# My.scatter.plot("red", 5, "loess")
 
 ```
 
 ## functions {.smaller}
 
-- Recall the linear model ( lfit() ) and 100 draws of coefficients (sample.coefs)
-- Now, write a set of commands that calculates the RMSE for the first pair of coefficients. (There are many steps! You need to calculate predicted values, then find residuals, then calculate RMSE)
+- Now, write a set of commands that calculates the RMSE for the coefficients from the original lfit model you ran. (There are many steps! You need to calculate predicted values, then find residuals, then calculate RMSE)
 - We will want to perform these steps many times, so now make this a function.
 - ONLY AFTER YOU'VE WRITTEN YOUR OWN:
 Matt has provided a sample function at
